[tool.poetry]
name = "bankedpy"
version = "0.1.0"
description = ""
authors = ["Aryan Curiel <aryan.curiel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pydantic = "^1.7.3"
iso4217 = "^1.6.20180829"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
